--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         corda_release_group = 'net.corda'
-        corda_release_version = '4.3-RC01'
+        corda_release_version = '4.3'
         
         accounts_release_group = 'com.r3.corda.lib.accounts'
         accounts_release_version = '1.0-RC04'
