--- a/contracts/build.gradle
+++ b/contracts/build.gradle
@@ -5,7 +5,7 @@ cordapp {
     targetPlatformVersion 4
     minimumPlatformVersion 4
     contract {
-        name "Template Contract"
+        name "accounts_SupplyChain Contract"
         vendor "Corda Open Source"
         licence "A liberal, open source licence"
         versionId 1
