--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,27 @@
 buildscript {
+    Properties constants = new Properties()
+    file("$projectDir/./constants.properties").withInputStream { constants.load(it) }
     ext {
-        corda_release_group = 'net.corda'
-        corda_release_version = '4.3'
-        
-        accounts_release_group = 'com.r3.corda.lib.accounts'
-        accounts_release_version = '1.0-RC04'
-        
-        confidential_id_release_group = "com.r3.corda.lib.ci"
-        confidential_id_release_version = "1.0-RC03"
-
-
-
-
-        corda_gradle_plugins_version = '4.0.42'
-        kotlin_version = '1.2.71'
-        junit_version = '4.12'
-        quasar_version = '0.7.11_r3'
-
+        corda_release_group = constants.getProperty("cordaReleaseGroup")
+        corda_core_release_group =  constants.getProperty("cordaCoreReleaseGroup")
+        corda_release_version = constants.getProperty("cordaVersion")
+        corda_core_release_version = constants.getProperty("cordaCoreVersion")
+        corda_gradle_plugins_version = constants.getProperty("gradlePluginsVersion")
+        kotlin_version = constants.getProperty("kotlinVersion")
+        junit_version = constants.getProperty("junitVersion")
+        quasar_version = constants.getProperty("quasarVersion")
+        log4j_version = constants.getProperty("log4jVersion")
+        slf4j_version = constants.getProperty("slf4jVersion")
+        corda_platform_version = constants.getProperty("platformVersion").toInteger()
+        //springboot
         spring_boot_version = '2.0.2.RELEASE'
         spring_boot_gradle_plugin_version = '2.0.2.RELEASE'
-        slf4j_version = '1.7.25'
-        log4j_version = '2.9.1'
+        //account
+        accounts_release_group = 'com.r3.corda.lib.accounts'
+        accounts_release_version = '1.0'
+        //CI
+        confidential_id_release_group = "com.r3.corda.lib.ci"
+        confidential_id_release_version = "1.0"
     }
 
     repositories {
